--- a/FINAL.css
+++ b/FINAL.css
@@ -23,6 +23,12 @@ section{
     margin: 0 auto;
 }
 
+.nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .nav__row{
     display: flex;
     justify-content: space-between;
@@ -52,6 +58,7 @@ section{
     display: flex;
     align-items: center;
     padding-bottom: 2px;
+    
 }
 
 .nav__link{
@@ -62,13 +69,31 @@ section{
     border-bottom: 2px solid transparent;
     position: relative;
     transition: all 300ms;
+    padding-left: 20px;
 }
 
 
+.nav__link--primary{
+    margin: 0;
+    padding: 10px 32px;
+    margin-top: 2px;
+    margin-left: 40px;
+    border-radius: 9999px;
+    color: white;
+    background-color: #6415ff;
+    line-height: 1.5;
+    border: none;
+    width: auto;
+    transition: all 300ms ease;
+}
 
+.login{
+    margin-left: 48px;
+}
 
 a {
     text-decoration: none;
+    display: inline;
 }
 
 a:hover{
