--- a/FINAL.css
+++ b/FINAL.css
@@ -21,6 +21,7 @@ section{
     width: 100%;
     max-width: 1280px;
     margin: 0 auto;
+    display: flex;
 }
 
 .nav{
@@ -30,14 +31,15 @@ section{
 }
 
 .nav__row{
-    display: flex;
     justify-content: space-between;
+    display: flex;
 }
 
 .nav__logo{
     margin: 8px 0;
     padding-bottom: 4px;
     align-items: center;
+    display: flex;
 }
 
 .nav__logo--img {
@@ -77,7 +79,7 @@ section{
     margin: 0;
     padding: 10px 32px;
     margin-top: 2px;
-    margin-left: 40px;
+    margin-left: 48px;
     border-radius: 9999px;
     color: white;
     background-color: #6415ff;
@@ -104,3 +106,151 @@ a:hover{
     width: 100%;
 }
 
+/* Body*/
+
+.container{
+    padding: 96px 0;
+}
+
+.header .row{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+ .header__description{
+    width: 40%;
+ }
+
+h1{
+    font-size: 48px;
+    color: #1a202c;
+    line-height: 1.25;
+}
+
+.purple{
+    color: #6415ff;
+}
+
+.header__description--para{
+    margin: 32px 0;
+}
+
+p{
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+.header__email{
+    width: 100%;
+    max-width: 448px;
+    height: 68px;
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.header__email--input{
+    width: 100%;
+    border-radius: 500px;
+    border: 2px solid rgb(229, 231, 235);
+    padding: 20px 192px 20px 32px;
+    color: rgb(36, 62, 99);
+    font-size: 16px;
+    font-weight: 500;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
+    transition: border-color 300ms;
+}
+
+.header__email--btn{
+    z-index: 2;
+    margin: 8px;
+    height: calc(100% - 16px);
+    border-radius: 500px;
+    width: 160px;
+    border: none;
+    background-color: #6415ff;
+    color: white;
+    font-weight: 700;
+    font-size: 16px;
+    transition: all 300ms ease;
+}
+
+/* media small */
+
+@media(max-width: 640px) {
+    .container{
+        padding: 80px;
+    }
+
+    .header__email{
+        flex-direction: column;
+        height: auto;
+    }
+
+    .header__email--input{
+        position: static;
+        padding: 16px 0;
+        padding-left: 32px;
+        line-height: 1.5;
+    }
+
+    .header__email--btn{
+        width: 100%;
+        padding: 16px 0;
+        margin: 16px 0;
+        margin-bottom: 0px;
+        line-height: 1.5;
+    }
+}
+
+/* media large */
+@media (max-width: 1024px){
+    header .row{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header__description{
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header__description, .header__img--wrapper{
+        width: 100%;
+        max-width: 512px;
+        margin: 0 auto;
+    }
+
+    h1{
+        font-size: 30px;
+    }
+
+    .header__description--para{
+        margin: 20px 0;
+    }
+}
+
+/* media X large */
+
+@media(max-width: 1280px){
+    header .row{
+        align-items: flex-end;
+    }
+
+    h1{
+        font-size: 36px;
+        color: #1a202c;
+        line-height: 1.25;
+    }
+
+    .header__description--para{
+        font-size: 16px;
+    }
+}
