--- a/FINAL.css
+++ b/FINAL.css
@@ -180,6 +180,34 @@ p{
     transition: all 300ms ease;
 }
 
+button{
+    cursor: pointer;
+    border: none;
+}
+
+.header__customers--title {
+    margin-top: 80px;
+    color: #a0aec0;
+    font-size: 12px;
+    font-weight: 700;
+    letter-spacing: 0.6;
+}
+
+.header__customers{
+    margin-top: 16px;
+    padding-right: 128px;
+    opacity: 0.5;
+}
+
+.header__img--wrapper{
+    width: calc(100% - 40%);
+}
+
+.header__img{
+    width: 100%;
+    max-width: 768px;
+}
+
 /* media small */
 
 @media(max-width: 640px) {
@@ -205,6 +233,11 @@ p{
         margin: 16px 0;
         margin-bottom: 0px;
         line-height: 1.5;
+    }
+
+    .header__customers--title{
+        font-size: 14px;
+        letter-spacing: 0.05em;
     }
 }
 
@@ -235,6 +268,27 @@ p{
     .header__description--para{
         margin: 20px 0;
     }
+
+    .header__description--title,
+    .header__img--wrapper{
+        margin-top: 48px;
+    }
+
+    .header__customers{
+        padding-right: 0px;
+    }
+
+    .header__customers--title,
+    .header__img--wrapper{
+        margin-top: 48px;
+    }
+
+    .header__description,
+    .header__img--wrapper{
+        width: 100%;
+        max-width: 512px;
+        margin: 0 auto;
+    }
 }
 
 /* media X large */
@@ -252,5 +306,18 @@ p{
 
     .header__description--para{
         font-size: 16px;
+    }
+
+    .header__customers{
+        padding-right: 64px;
+    }
+
+    .header__img--wrapper{
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .header__img{
+        max-width: 512px;
     }
 }
