--- a/FINAL.css
+++ b/FINAL.css
@@ -283,12 +283,77 @@ button{
     padding: 20px;
     border: 1px solid #e5e7eb;
     border-radius: 500px;
+    margin-bottom: 80px;
  }
 
  .feature__img{
     width: 24px;
     height: 24px;
  }
+
+ .feature__text{
+    margin-top: 8px;
+    margin-left: 16px;
+ }
+
+ .feature__para{
+    margin-top: 16px;
+    font-size: 16px;
+    max-width: calc(634px / 3);
+    color: rgb(124, 139, 161);
+    line-height: 2;
+    font-weight: 500;
+ }
+
+ /* quality */
+
+ #quality .row{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+ }
+
+.quality__decription, .quality__img--wrapper{
+    width: 50%;
+}
+
+.quality__decription{
+    max-width: 576px;
+    margin-right: 64px;
+}
+
+#quality .section__title{
+    line-height: 1.25;
+}
+
+#quality .btn{
+    margin-top: 32px;
+}
+
+.btn{
+    background-color: #6415ff;
+    padding: 12px 32px;
+    border: none;
+    border-radius: 500px;
+    font-size: 14px;
+    color: white;
+    font-weight: bold;
+    transition: all 300ms ease;
+    cursor: pointer;
+}
+
+.quality__img--wrapper{
+    border-radius: 4px;
+    border: 1px solid rgb(229, 231, 235);
+    position: relative;
+    margin: 0 56px;
+    z-index: 2;
+    display: flex;
+}
+
+.quality__img{
+    z-index: 1;
+}
 
 /* media small */
 
@@ -345,6 +410,29 @@ button{
         flex-direction: column;
         align-items: center;
         text-align: center;
+    }
+
+    .feature__text{
+        margin-left: 0px;
+        margin-top: 16px;
+    }
+
+    .feature__title{
+        letter-spacing: 0.025em;
+        line-height: 1;
+    }
+
+    .feature__para{
+        margin-top: 4px;
+        line-height: 2;
+    }
+
+    .section__title{
+        font-size: 30px;
+    }
+
+    .btn{
+        line-height: 1.5;
     }
 }
 
@@ -422,6 +510,19 @@ button{
         padding: 32px 8px;
         margin: 0 16px;
     }
+
+    .feature__title{
+        line-height: 1;
+    }
+
+    .feature__para{
+        max-width: none;
+    }
+
+    .quality__decription{
+        margin-right: 0px;
+        padding-right: 48px;
+    }
 }
 
 /* media X large */
@@ -467,6 +568,32 @@ button{
     .feature{
         width: auto;
         max-width: 384px;
+    }
+
+    #quality .row, #values .row{
+        flex-direction: column-reverse;
+    }
+
+    .quality__decription, 
+    .quality__img--wrapper,
+    .step__description, 
+    .step__img--wrapper,
+    .values__description,
+    .values__img,
+    .testimonials__description, 
+    .testimonials__img {
+        width: 100%;
+        max-width: 448px;
+    }
+
+    .quality__decription, 
+    .quality__img--wrapper,
+    .step__description,
+    .values__description,
+    .testimonials__description {
+        padding: 0;
+        margin-top: 64px;
+        text-align: center;
     }
 }
   
