--- a/FINAL.css
+++ b/FINAL.css
@@ -376,12 +376,11 @@ button{
 
 .steps__img{
     z-index: 2;
-    width: 700;
+    max-width: 600px;
 }
 
 .steps__description{
     padding: 32px 0;
-    margin-top: 64px;
     text-align: center;
 }
 
