--- a/FINAL.css
+++ b/FINAL.css
@@ -419,6 +419,260 @@ button{
     line-height: 2;
 }
 
+/* vales */
+
+#values .row{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.values__description,
+.values__img{
+    width: 50%;
+}
+
+.values__description{
+    padding: 32px 64px 32px 0;
+}
+
+#values .section__title{
+    margin-top: 16px;
+    margin-bottom: 32px;
+}
+
+#values .section__title{
+    line-height: 1.25;
+}
+
+.section__para{
+    font-size: 18px;
+    font-weight: 500;
+    color: #7c8ba1;
+    line-height: 1.625;
+}
+
+.values__list{
+    margin-left: 0px;
+    margin-right: 0px;
+    display: flex;
+    max-width: none;
+    flex-direction: row;
+}
+
+.value{
+    margin-top: 2rem;
+    margin-right: 2rem;
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+}
+
+.value__title{
+    display: flex;
+    align-items: center;
+}
+
+.value:nth-of-type(1){
+    margin-top: 32px;
+    margin-right: 32px;
+}
+
+.value:nth-child(1)
+.value__img--wrapper{
+    background-color: #9ae6b4;
+}
+
+.value__img--wrapper{
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 36px;
+    height: 36px;
+}
+
+.value__name{
+    margin-left: 12px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #243e63;
+}
+
+.value__para{
+    margin-top: 16px;
+    line-height: 1.625;
+    color: #718096;
+}
+
+.value:nth-of-type(2){
+    margin-top: 32px;
+}
+
+.value:nth-child(2)
+.value__img--wrapper{
+    background-color: #feb2b2;
+}
+
+#values .btn{
+    margin-top: 48px;
+}
+
+/* plans */
+
+#pricing .row{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#pricing .section__title{
+    text-align: center;
+}
+
+#pricing .section__para{
+    max-width: 576px;
+    text-align: center;
+}
+
+.plans{
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.plan{
+    position: relative;
+    margin-top: 4rem;
+    display: flex;
+    width: 100%;
+    max-width: 24rem;
+    flex-direction: column;
+    border-radius: 1.5rem;
+    background-color: rgb(255, 255, 255);
+    padding-left: 2rem;
+    padding-right: 2rem;
+    margin-right: 2rem;
+    padding-top: 0.5rem;
+    text-align: center;
+    color: rgb(26 32 44);
+    box-shadow: rgb(0, 0, 0, 0) 0px 0px 0px 0px, rgb(0, 0, 0, 0) 0px 0px 0px 0px, rgb(0, 0, 0, 0.1) 0px 1px 3px 0px, rgb(0, 0, 0, 0.06) 0px 1px 2px 0px;
+}
+
+.plan:nth-child(1), 
+.plan__stripe,
+.plan:nth-child(1)
+.plan__button{
+    color: #f7fafc;
+    background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
+}
+
+.plan__stripe{
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    top: 0px;
+    height: 0.5rem;
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+}
+
+.plan__top{
+    display: flex;
+    flex-direction: column;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    text-transform: uppercase;
+    line-height: 1.625;
+}
+
+.plan:nth-child(odd), 
+.plan__name,
+.plan__price,
+.plan__target{
+    color: #1a202c;
+}
+
+.plan__name{
+    font-size: 20px;
+}
+
+.plan__name,
+.plan__price,
+.plan__duration{
+    font-weight: bold;
+    line-height: 1.625;
+}
+
+.plan__price{
+    font-size: 48px;
+    margin: 4px 0;
+}
+
+.plan:nth-child(odd), 
+.plan__duration{
+    color: #a0aec0;
+}
+
+.plan__duration{
+    font-size: 16px;
+    letter-spacing: 0.1em;
+}
+
+.plan:nth-child(1), 
+.plan__middle, 
+.plan:nth-child(3), 
+.plan__middle{
+    border-top: 2px solid rgb(229, 231, 235);
+    border-bottom: 2px solid rgb(229, 231, 235);
+}
+
+.plan__middle{
+    margin-left: -2rem;
+    margin-right: -2rem;
+    display: flex;
+    flex: 1 1 0%;
+    flex-direction: column;
+    border-top-width: 2px;
+    border-bottom-width: 2px;
+    padding: 2rem;
+}
+
+.plan__target{
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 1.5;
+    letter-spacing: 0.025em;
+}
+
+.plan__feature{
+    margin-top: 20px;
+    font-weight: 500;
+    flood-color: #718096;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+.plan__bottom{
+    padding-left: 4rem;
+    padding-right: 4rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
+.plan__button{
+    border-radius: 0.25rem;
+    background-color: rgb(100 21 255);
+    padding: 0.75rem 2rem;
+    font-weight: 700;
+    color: rgb(247 250 252);
+    transition: all 300ms ease;
+    width: 100%;
+}
+
+
 /* media small */
 
 @media(max-width: 640px) {
@@ -501,6 +755,23 @@ button{
 
     .steps__list{
         margin-top: 48px;
+    }
+
+    .section__title{
+        font-size: 30px;
+        line-height: 1.25;
+    }
+
+    .btn{
+        line-height: 1.5;
+    }
+
+    .plan__price{
+        font-size: 36px;
+    }
+
+    .plan__bottom{
+        padding: 2rem 1rem;
     }
 }
 
@@ -591,6 +862,32 @@ button{
         margin-right: 0px;
         padding-right: 48px;
     }
+
+    .section__title{
+        font-size: 36px;
+    }
+
+    .section__para{
+        font-size: 16px;
+    }
+
+    .values__list{
+        max-width: 20rem;
+        flex-direction: column;
+    }
+
+    .value{
+        margin-top: 2.5rem;
+    }
+
+    .plans{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .plan{
+        margin-right: 0px;
+    }
 }
 
 /* media X large */
@@ -621,6 +918,11 @@ button{
 
     .header__img{
         max-width: 512px;
+    }
+
+    .plan__bottom{
+        padding-left: 2rem;
+        padding-right: 2rem;
     }
 }
 
@@ -678,5 +980,29 @@ button{
         margin-top: 12px;
         margin-left: 0;
     }
+
+    .section__para{
+        font-size: 14px;
+    }
+
+    .values__list{
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .value:nth-of-type(1){
+        margin-right: 0px;
+    }
+
+    .value{
+        margin-right: 0px;
+        align-items: center;
+    }
+
+    #pricing .row{
+        margin-top: 40px;
+    }
+
+
 }
   
