--- a/FINAL.css
+++ b/FINAL.css
@@ -670,6 +670,12 @@ button{
     color: rgb(247 250 252);
     transition: all 300ms ease;
     width: 100%;
+    border-radius: 9999px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    font-size: 0.875rem;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
 }
 
 
