--- a/FINAL.css
+++ b/FINAL.css
@@ -561,13 +561,6 @@ button{
     box-shadow: rgb(0, 0, 0, 0) 0px 0px 0px 0px, rgb(0, 0, 0, 0) 0px 0px 0px 0px, rgb(0, 0, 0, 0.1) 0px 1px 3px 0px, rgb(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
 
-.plan:nth-child(2), 
-.plan__stripe,
-.plan:nth-child(1)
-.plan__button{
-    color: #f7fafc;
-    background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
-}
 
 .plan__stripe{
     position: absolute;
@@ -682,11 +675,23 @@ button{
     background: linear-gradient(135deg, rgb(76, 81, 191) 0%, rgb(102, 126, 234) 100%);
 }
 
-.plan:nth-child(3) .plan__stripe, .plan:nth-child(3) .plan__button{
-    
+.plan:nth-child(2) .plan__button{
+    color: #6415ff;
+    background-color: #f7fafc;
 }
 
+.plan:nth-child(3) .plan__stripe, .plan:nth-child(3) .plan__button{
+    background: linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(245, 178, 178) 100%);
+}
 
+.plan:nth-child(1) .plan__stripe, .plan:nth-child(1) .plan__button{
+    
+    background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
+}
+
+.plan__name--middle{
+    color: white;
+}
 
 
 
