--- a/FINAL.css
+++ b/FINAL.css
@@ -693,7 +693,21 @@ button{
     color: white;
 }
 
+/* testimonials*/
 
+#testimonials .container{
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+}
+
+#testimonials .row{
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1280px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
 
 /* media small */
@@ -910,6 +924,11 @@ button{
 
     .plan{
         margin-right: 0px;
+    }
+
+    .testimonials .container{
+        padding-top: 5rem;
+        padding-bottom: 5rem;
     }
 }
 
