--- a/FINAL.css
+++ b/FINAL.css
@@ -709,6 +709,36 @@ button{
     justify-content: space-between;
 }
 
+.testimonials__img, .testimonials__description{
+    width: 50%;
+}
+
+.testimonials__description{
+    display: flex;
+    flex-direction: column;
+    padding-left: 64px;
+}
+
+#testimonials .section__title{
+    margin-bottom: 24px;
+    line-height: 1.25;
+}
+
+.testimonial{
+    margin-top: 40px;
+}
+
+.fa-solid, .fas{
+    font-weight: 900;
+}
+
+.fa-star{
+    color: rgb(246 173 85);
+    display: inline-block;
+    height: 1.25rem;
+    width: 1.25rem;
+}
+
 
 /* media small */
 
@@ -965,6 +995,14 @@ button{
     .plan__bottom{
         padding-left: 2rem;
         padding-right: 2rem;
+    }
+
+    .testimonials__img{
+        width: 40%;
+    }
+
+    .testimonials__description{
+        width: calc(100% - 40%);
     }
 }
 
