--- a/FINAL.css
+++ b/FINAL.css
@@ -732,11 +732,62 @@ button{
     font-weight: 900;
 }
 
+.testimonial__rating{
+    color: rgba(246, 173, 85);
+    margin-right: 2px;
+    margin-top: 4px;
+}
+
 .fa-star{
     color: rgb(246 173 85);
     display: inline-block;
     height: 1.25rem;
     width: 1.25rem;
+}
+
+.fa, .fa-brands, .fa-regular, .fa-solid, .fab, .far, .fas{
+    display: var(--fa-display, inline-block);
+    font-style: normal;
+    font-variant: normal;
+    line-height: 1;
+    text-rendering: auto;
+}
+
+.fa-brands:before, .fa-regular:before, .fa-solid:before, .fa:before, .fab:before, .far:before, .fas:before{
+    content: var(--fa);
+}
+
+.testimonial__title{
+    color: #4a5568;
+    line-height: 1.625;
+    margin-top: 1rem;
+    font-size: 1.25rem;
+    font-weight: 700;
+}
+
+.testimonial__para{
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    font-weight: 500;
+    line-height: 1.625;
+    font-size: 16px;
+    color: rgb(74 85 104);
+}
+
+.testimonial__bottom{
+    display: flex;
+    justify-content: space-between;
+}
+
+.testimonial__profile{
+    display: flex;
+    align-items: center;
+}
+
+.testimonial__img{
+    width: 80px;
+    width: 80px;
+    border-radius: 50%;
 }
 
 
@@ -839,6 +890,26 @@ button{
 
     .plan__bottom{
         padding: 2rem 1rem;
+    }
+
+    .testimonial__para{
+        margin-bottom: 32px;
+    }
+
+    .testimonial__bottom{
+        flex-direction: column;
+        align-items: center;
+        padding-top: 4px;
+    }
+
+    .testimonial__profile{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .testimonial__img{
+        height: 64px;
+        width: 64px;
     }
 }
 
