--- a/FINAL.css
+++ b/FINAL.css
@@ -105,6 +105,13 @@ a:hover{
     width: 100%;
 }
 
+.btn__menu{
+    background-color: transparent;
+    border: none;
+    display: none;
+    transition: all 300ms ease;
+}
+
 /* Body*/
 
 .container{
@@ -356,6 +363,20 @@ button{
     max-width: 700px;
 }
 
+.quality__grid{
+    transform: translateX(125%) translateY(50%) scaleX(1) scaleY(1);
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    fill: rgb(100, 21, 255);
+    --tw-text-opacity: 1;
+    color: rgba(100, 21, 255, var(--tw-text-opacity));
+    z-index: 0;
+    display: block;
+}
+
 /* steps */
 
 #steps .row{
@@ -418,6 +439,21 @@ button{
     font-weight: 500;
     line-height: 2;
 }
+
+.steps__grid{
+    position: absolute;
+    bottom: -100px;
+    left: 47%;
+    transform: translateX(-50%);
+    width: 10rem;
+    height: 10rem;
+    opacity: 0.8;
+    z-index: -10;
+    color: rgb(100, 21, 255);
+    fill: currentColor;
+}
+
+
 
 /* vales */
 
@@ -693,6 +729,17 @@ button{
     color: white;
 }
 
+.plans__blob{
+    z-index: -10;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    transform: translateX(-50%) translateY(50%) scaleX(1) scaleY(1);
+    height: 256px;
+    width: 256px;
+    opacity: 0.25;
+}
+
 /* testimonials*/
 
 #testimonials .container{
@@ -790,6 +837,143 @@ button{
     border-radius: 50%;
 }
 
+.testimonial__detail{
+    margin-left: 24px;
+}
+
+.testimonial__name{
+    color: #4a5568;
+    line-height: 1.625;
+    font-size: 1.25rem;
+    font-weight: 700;
+}
+
+.testimonial__role{
+    color: #7c8ba1;
+    font-weight: 500;
+    line-height: 1.5;
+}
+
+.testimonial__buttons{
+    display: flex;
+    align-items: center;
+}
+
+.testimonial__button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+    background: #edf2f7;
+    border-radius: 50%;
+    margin: 0 12px;
+    transition: all 300ms ease;
+}
+
+.testimonial__button svg{
+    width: 16px;
+    height: 16px;
+}
+
+.divider{
+    margin-top: 0.75rem;
+    margin-bottom: 0.75rem;
+    border-right-width: 1px;
+    width: 0.5px;
+    background-color: #edf2f7;
+    height: 20px;
+}
+
+/* start */
+
+#start .row{
+    position: relative;
+    overflow: hidden;
+}
+
+.start__blob--1{
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    height: 20rem;
+    width: 20rem;
+    transform: translate(-5rem, 8rem);
+    color: rgb(80 17 204);
+    opacity: 0.5;
+}
+
+.start__blob--2{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    height: 20rem;
+    width: 20rem;
+    transform: translate(5rem, -16rem);
+    color: rgb(80 17 204);
+    opacity: 0.5;
+}
+
+.start__container{
+    padding: 96px 0;
+    width: 100%;
+    background-color: rgb(100, 21, 255);
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.start__row{
+    width: 100%;
+    margin: 0 auto;
+    max-width: 1024px;
+    padding: 0 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.start__title{
+    color: #f7fafc;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 1.5;
+    z-index: 2;
+}
+
+.start__title, .start__buttons{
+    width: 50%;
+}
+
+.start__buttons{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.start__button{
+    padding: 20px 40px;
+    border-radius: 500px;
+    font-weight: 700;
+    font-size: 16px;
+    color: #f7fafc;
+    line-height: 1.5;
+    letter-spacing: 0.025;
+    margin: 1;
+    z-index: 2;
+}
+
+.start__button--1{
+    background: #f56565;
+    box-shadow: (0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
+    rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+    margin-right: 32px;
+    transition: all 300ms ease;
+}
+
+.start__button--2{
+    border: 1px solid rgb(160, 174, 192);
+    transition: all 300ms ease;
+}
 
 /* media small */
 
@@ -842,6 +1026,11 @@ button{
         line-height: 1.25;
     }
 
+    #quality .row{
+        flex-direction: column;
+        max-width: 100%;
+    }
+
     .feature__row{
         flex-direction: column;
         align-items: center;
@@ -874,6 +1063,12 @@ button{
     .steps__list{
         margin-top: 48px;
     }
+
+    .steps__grid{
+    height: 5rem;
+    width: 5rem;
+    bottom: -5px;
+}
 
     .section__title{
         font-size: 30px;
@@ -911,6 +1106,45 @@ button{
         height: 64px;
         width: 64px;
     }
+
+    .testimonial__detail{
+        margin-left: 0;
+        margin-top: 8px;
+    }
+
+    .testimonial__buttons{
+        margin-top: 32px;
+    }
+
+    #start .container{
+        padding-top: 5rem;
+        padding-bottom: 5rem;
+    }
+
+    .start__container{
+        padding: 80px 0;
+    }
+
+    .start__title{
+        font-size: 24px;
+    }
+
+    .start__buttons{
+        flex-direction: column;
+    }
+
+    .start__button{
+        padding: 12px 24px;
+        font-size: 14px;
+    }
+
+    .start__button--1{
+        margin-right: 0;
+    }
+
+    .start__button--2{
+        margin-top: 16px;
+    }
 }
 
 /* media large */
@@ -931,6 +1165,10 @@ button{
         width: 100%;
         max-width: 512px;
         margin: 0 auto;
+    }
+
+    .btn__menu{
+        display: block;
     }
 
     h1{
@@ -1031,6 +1269,25 @@ button{
         padding-top: 5rem;
         padding-bottom: 5rem;
     }
+
+    .start__row{
+        flex-direction: column;
+    }
+
+    .start__title{
+        text-align: center;
+        width: 100%;
+        max-width: 512px;
+    }
+
+    .start__buttons{
+        width: auto;
+        margin-top: 24px;
+    }
+
+    .start__button{
+        padding: 16px 32px;
+    }
 }
 
 /* media X large */
@@ -1118,7 +1375,7 @@ button{
     }
 
     #steps .row,
-    .testimonials__description{
+    #testimonials .row{
         flex-direction: column;
     }
 
@@ -1153,6 +1410,8 @@ button{
     #pricing .row{
         margin-top: 40px;
     }
+
+
 
 
 }
