--- a/FINAL.css
+++ b/FINAL.css
@@ -1031,6 +1031,10 @@ button{
         max-width: 100%;
     }
 
+    .quality__img{
+        width: 100%;
+    }
+
     .feature__row{
         flex-direction: column;
         align-items: center;
@@ -1068,7 +1072,11 @@ button{
     height: 5rem;
     width: 5rem;
     bottom: -5px;
-}
+    }
+
+    .steps__img{
+        width: 100%;
+    }
 
     .section__title{
         font-size: 30px;
