--- a/FINAL.css
+++ b/FINAL.css
@@ -112,6 +112,62 @@ a:hover{
     transition: all 300ms ease;
 }
 
+.menu--open .menu{
+    visibility: visible;
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.menu{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 378px;
+    margin: 24px 16px;
+    padding: 32px;
+    background-color: white;
+    border: 1px solid rgb(229, 231, 235);
+    border-radius: 8px;
+    z-index: 4;
+    visibility: hidden;
+    opacity: 0;
+    transform: translateX(300%);
+    transition: all 300ms ease;
+}
+
+.btn__menu--close{
+    position: fixed;
+    top: 24px;
+    right: 18px;
+}
+
+.menu__links{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu__link{
+    color: #1a202c;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.5;
+    margin: 8px 0;
+    padding-bottom: 4px;
+    border-bottom: 2px solid transparent;
+}
+
+.menu__link--primary{
+    color: #f7fafc;
+    padding: 12px 32px;
+    background: #6415ff;
+    border-radius: 500px;
+    border: none;
+}
+
 /* Body*/
 
 .container{
@@ -978,6 +1034,10 @@ button{
 /* media small */
 
 @media(max-width: 640px) {
+    .nav__links{
+        display: none;
+    }
+    
     .container{
         padding: 80px;
     }
@@ -1157,6 +1217,10 @@ button{
 
 /* media large */
 @media (max-width: 1024px){
+    .nav__links{
+        display: none;
+    }
+    
     header .row{
         flex-direction: column;
         align-items: center;
@@ -1343,6 +1407,10 @@ button{
 }
 
 @media(max-width: 768px){
+    .nav__links{
+        display: none;
+    }
+    
     .section__para{
         font-size: 14px;
     }
