footer is acting weird

--- a/FINAL.css
+++ b/FINAL.css
@@ -376,11 +376,11 @@ button{
     align-items: center;
  }
 
-.quality__decription, .quality__img--wrapper{
+.quality__description, .quality__img--wrapper{
     width: 50%;
 }
 
-.quality__decription{
+.quality__description{
     max-width: 576px;
     margin-right: 64px;
 }
@@ -1031,6 +1031,127 @@ button{
     transition: all 300ms ease;
 }
 
+/* footer */
+
+footer{
+    padding: 96px 32px;
+    background-color: regb(100, 21, 255);
+    margin-bottom: -32px;
+    position: relative;
+    overflow: hidden;
+}
+
+.footer__blob--1{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 320px;
+    height: 320px;
+    transform: translateX(-80px) translateY(-128px);
+    z-index: 1;
+    opacity: 0.5;
+}
+
+.footer__blob--2{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 320px;
+    height: 320px;
+    transform: translateX(128px) translateY(192px);
+    z-index: 1;
+    opacity: 0.5;
+}
+
+.footer__columns{
+    margin-top: -48px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.footer__column{
+    margin-top: 48px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    z-index: 2;
+}
+
+.footer__column--title{
+    font-weight: 700;
+    color: #f7fafc;
+    line-height: 1.5;
+}
+
+.footer__column--link{
+    color: #f7fafc;
+    font-size: 14px;
+    margin-top: 12px;
+    line-height: 1.5;
+    font-weight: 500;
+    position: relative;
+    cursor: pointer;
+}
+
+.footer__column--link:nth-child(2){
+    margin-top: 24px;
+}
+
+.footer__divider{
+    width: 100%;
+    height: 2px;
+    margin: 64px 0;
+    background: rgb(116, 44, 255);
+}
+
+.footer__bottom{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer__logo{
+    display: flex;
+    align-items: center;
+}
+
+.footer__logo--img{
+    height: 32px;
+    width: 32px;
+}
+
+.footer__logo--text{
+    font-size: 20px;
+    color: #f7fafc;
+    font-weight: 900;
+    margin-left: 8px;
+    letter-spacing: 0.05em;
+}
+
+.footer__copyright{
+    color: #cbd5e0;
+    font-weight: 500;
+}
+
+.footer__socials{
+    display: flex;
+    align-items: center;
+    margin-left: -16px;
+}
+
+.footer__socials--link{
+    margin-left: 16px;
+    padding: 8px;
+    background: #f7fafc;
+    display: flex;
+    justify-content: center;
+    border-radius: 50%;
+    z-index: 2;
+    cursor: pointer;
+    transition: all 300ms ease;
+}
+
 /* media small */
 
 @media(max-width: 640px) {
@@ -1213,6 +1334,23 @@ button{
     .start__button--2{
         margin-top: 16px;
     }
+
+    .footer__columns{
+        justify-content: center;
+    }
+
+    .footer__column{
+        width: auto;
+        padding: 0 16px;
+        text-align: center;
+        align-items: center;
+    }
+
+    .footer__copyright{
+        font-size: 14px;
+        text-align: center;
+        line-height: 1.5;
+    }
 }
 
 /* media large */
@@ -1306,7 +1444,7 @@ button{
         max-width: none;
     }
 
-    .quality__decription{
+    .quality__description{
         margin-right: 0px;
         padding-right: 48px;
     }
@@ -1359,6 +1497,10 @@ button{
 
     .start__button{
         padding: 16px 32px;
+    }
+
+    footer{
+        padding: 80px 32px;
     }
 }
 
@@ -1428,7 +1570,7 @@ button{
         flex-direction: column-reverse;
     }
 
-    .quality__decription, 
+    .quality__description, 
     .quality__img--wrapper,
     .steps__description, 
     .steps__img--wrapper,
@@ -1440,7 +1582,7 @@ button{
         max-width: 448px;
     }
 
-    .quality__decription, 
+    .quality__description, 
     .quality__img--wrapper,
     .steps__description,
     .values__description,
@@ -1487,8 +1629,29 @@ button{
         margin-top: 40px;
     }
 
+    .footer__columns{
+        justify-content: center;
+    }
 
+    .footer__column{
+        width: calc(100% / 3);
+    }
 
+    .footer__bottom{
+        flex-direction: column;
+        align-items: center;
+    }
 
+    .footer__copyright, .footer__socials{
+        margin-top: 32px;
+    }
+
+    .footer__socials{
+        margin-left: 0px;
+    }
+
+    .footer__social--link:first-child{
+        margin-left: 0px;
+    }
 }
   
