--- a/FINAL.css
+++ b/FINAL.css
@@ -20,7 +20,6 @@ section{
     width: 100%;
     max-width: 1280px;
     margin: 0 auto;
-    display: flex;
 }
 
 .nav{
@@ -55,7 +54,6 @@ section{
 }
 
 .nav__links{
-    display: none;
     display: flex;
     align-items: center;
     padding-bottom: 2px;
@@ -70,7 +68,7 @@ section{
     border-bottom: 2px solid transparent;
     position: relative;
     transition: all 300ms;
-    padding-left: 20px;
+    padding-left: 40px;
 }
 
 
@@ -88,6 +86,10 @@ section{
     transition: all 300ms ease;
 }
 
+.nav__link--primary:hover{
+    background-color: rgba(60, 13, 153);
+}
+
 .login{
     margin-left: 48px;
 }
@@ -98,10 +100,10 @@ a {
 }
 
 a:hover{
-    text-decoration: underline;
+    text-decoration: none;
 }
 
-.img{
+img{
     width: 100%;
 }
 
@@ -174,7 +176,7 @@ a:hover{
     padding: 96px 0;
 }
 
-.header .row{
+header .row{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -183,6 +185,10 @@ a:hover{
  .header__description{
     width: 40%;
  }
+
+ .header__email--btn:hover{
+        background-color: rgba(60, 13, 153);
+    }
 
 h1{
     font-size: 48px;
@@ -405,6 +411,10 @@ button{
     cursor: pointer;
 }
 
+.btn:hover{
+    background-color: rgba(60, 13, 153);
+}
+
 .quality__img--wrapper{
     border-radius: 4px;
     border: 1px solid rgb(229, 231, 235);
@@ -416,11 +426,10 @@ button{
 
 .quality__img{
     z-index: 1;
-    max-width: 700px;
 }
 
 .quality__grid{
-    transform: translateX(125%) translateY(50%) scaleX(1) scaleY(1);
+    transform: translateX(50%) translateY(50%) scaleX(1) scaleY(1);
     width: 80px;
     height: 80px;
     position: absolute;
@@ -511,7 +520,7 @@ button{
 
 
 
-/* vales */
+/* values */
 
 #values .row{
     display: flex;
@@ -763,6 +772,13 @@ button{
     letter-spacing: 0.05em;
 }
 
+.plan__button:hover{
+    transform: translate(1px, -1px);
+    box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
+    rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
+    rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+}
+
 .plan:nth-child(2){
     background: linear-gradient(135deg, rgb(76, 81, 191) 0%, rgb(102, 126, 234) 100%);
 }
@@ -926,6 +942,10 @@ button{
     transition: all 300ms ease;
 }
 
+.testimonial__button:hover{
+    background-color: rgb(229, 231, 235);
+}
+
 .testimonial__button svg{
     width: 16px;
     height: 16px;
@@ -1026,16 +1046,27 @@ button{
     transition: all 300ms ease;
 }
 
+.start__button--1:hover{
+    background-color: rgb(229, 62, 62);
+    margin-right: 32px;
+    transition: all 300ms ease;
+}
+
 .start__button--2{
     border: 1px solid rgb(160, 174, 192);
     transition: all 300ms ease;
+}
+
+.start__button--2:hover{
+    background-color: rgba(247, 250, 252);
+    color: rgba(100, 21, 255);
 }
 
 /* footer */
 
 footer{
     padding: 96px 32px;
-    background-color: regb(100, 21, 255);
+    background-color: rgb(100, 21, 255);
     margin-bottom: -32px;
     position: relative;
     overflow: hidden;
@@ -1094,6 +1125,17 @@ footer{
     cursor: pointer;
 }
 
+.footer__column--link:after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 100%;
+    background: #fff;
+    transition: all 300ms ease;
+    opacity: 0;
+}
+
 .footer__column--link:nth-child(2){
     margin-top: 24px;
 }
@@ -1140,7 +1182,7 @@ footer{
     margin-left: -16px;
 }
 
-.footer__socials--link{
+.footer__social--link{
     margin-left: 16px;
     padding: 8px;
     background: #f7fafc;
@@ -1150,6 +1192,11 @@ footer{
     z-index: 2;
     cursor: pointer;
     transition: all 300ms ease;
+}
+
+.footer__social--link svg{
+    height: 16px;
+    width: 16px;
 }
 
 /* media small */
@@ -1214,6 +1261,10 @@ footer{
 
     .quality__img{
         width: 100%;
+    }
+
+    .quality__grid{
+        margin-right: 60px;
     }
 
     .feature__row{
@@ -1380,6 +1431,7 @@ footer{
     .btn__menu{
         display: block;
     }
+
 
     h1{
         font-size: 30px;
@@ -1572,8 +1624,11 @@ footer{
 
     .quality__description, 
     .quality__img--wrapper,
+    .quality__img,
+    .quality__grid,
     .steps__description, 
     .steps__img--wrapper,
+    .steps__img,
     .values__description,
     .values__img,
     .testimonials__description, 
