--- a/FINAL.css
+++ b/FINAL.css
@@ -68,7 +68,7 @@ section{
     border-bottom: 2px solid transparent;
     position: relative;
     transition: all 300ms;
-    padding-left: 40px;
+    margin: 0 24px;
 }
 
 
@@ -88,6 +88,22 @@ section{
 
 .nav__link--primary:hover{
     background-color: rgba(60, 13, 153);
+}
+
+.nav__link:hover:after{
+    opacity: 1;
+}
+
+.nav__link:after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    height: 2px;
+    width: 100%;
+    background: #6415ff;
+    transition: all 300ms ease;
+    opacity: 0;
 }
 
 .login{
